SEBSP-220 extend DB Model and implement backend for ScheduledDelete and exclude from delete features